<resources>
    <string name="app_name">RickAndMorty</string>

    // bottom navigation menu
    <string name="characteres">Characters</string>
    <string name="episodes">Episodes</string>
    <string name="locations">Locations</string>
    <string name="residents">Residents</string>


    // search helpers
    <string name="search_text_category_empty">Set category and type search request</string>
    <string name="categoty_search_header">Choose parameter for search</string>
    <string name="type_search_request">Type search request</string>
    <string name="search_error">Check internet and refresh results. All data is from the local database now.</string>
    <string name="placeholder_text">No results on your search request, but as Rick says “I know that new situations can be intimidating. You’re lookin’ around and it’s all scary and different, but y’know, meeting them head-on, charging into ‘em like a bull — that’s how we grow as people.”</string>
    <string name="no_internet_episodes">You might not be able to view all episodes featuring this character due to a lack of internet connection.</string>
    <string name="no_internet_characters_episode">You might not be able to view all characters from this episode due to a lack of internet connection.</string>
    <string name="no_internet_characters_location">You might not be able to view all characters from this location due to a lack of internet connection.</string>

    // Details helpers
    <string name="no_origin">Origin is unknown</string>
    <string name="no_location">Location is unknown</string>
    <string name="internet_is_needed">Check internet connection to get details</string>
    <string name="no_residents_episode">No residents for current episode</string>
    <string name="no_resident_location">No resident for current location</string>
    <string name="no_episodes_character">No episodes for current character</string>


    // Bottom Sheet Filters
    <string name="filters">Filters</string>
    <string name="status">Status</string>
    <string name="alive">Alive</string>
    <string name="dead">Dead</string>
    <string name="unknown">Unknown</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="genderless">Genderless</string>
    <string name="apply">Apply</string>
    <string name="clear">Clear</string>


</resources>