<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:icon="@drawable/ic_rick"
        android:id="@+id/charactersListFragment"
        android:enabled="true"
        android:title="@string/characteres"
        />

    <item
        android:iconTint="@color/buttom_navigation_icon_color"
        android:id="@+id/locationsListFragment"
        android:icon="@drawable/ic_locations"
        android:title="@string/locations"/>

    <item
        android:iconTint="@color/buttom_navigation_icon_color"
        android:id="@+id/episodesListFragment"
        android:enabled="true"
        android:icon="@drawable/ic_episodes"
        android:title="@string/episodes"/>

</menu>