<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.characters.view.CharactersListFragment">

    <TextView
        android:id="@+id/header_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="Characters"
        style="@style/list_screen_header" />

    <LinearLayout
        android:id="@+id/search_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_title"
        style="@style/details_screen_search_layout">

        <Spinner
            android:id="@+id/spinnerCategory"
            android:prompt="@string/categoty_search_header"
            style="@style/bt_filter" />

        <EditText
            android:id="@+id/input_text_search"
            style="@style/edit_text_search"
            android:hint="Type here"
            android:drawableEnd="@drawable/ic_clear"
            />

        <ImageButton
            android:id="@+id/bt_search"
            android:src="@drawable/ic_search"
            style="@style/bt_search_filter_black" />

        <ImageButton
            android:id="@+id/bt_filter"
            android:src="@drawable/ic_filter"
            style="@style/bt_search_filter_black" />

    </LinearLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_layout"
        style="@style/details_screen_swipe_layout">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_items"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:foregroundGravity="center_horizontal"/>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/placeholder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_layout"
        style="@style/list_screen_layout_placeholder">

        <ImageView
            android:id="@+id/image_placeholder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_morty_placeholder" />
        <TextView
            android:id="@+id/text_placeholder"
            android:text="@string/placeholder_text"
            style="@style/list_screen_placeholder" />
    </LinearLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/standard_bottom_sheet"
            style="@style/bottom_sheet"
            android:backgroundTint="@color/peach"
            app:behavior_hideable="true"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <View style="@style/handler_bottom_sheet" />

            <TextView
                android:id="@+id/btn_sheet_header"
                style="@style/header_bottom_sheet"
                android:gravity="center"
                android:text="@string/filters" />

            <TextView
                android:id="@+id/textView"
                android:text="@string/status"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_layout"
                style="@style/bottom_sheet_title" />

            <RadioGroup
                android:id="@+id/rgStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/fresh_green" />

                <RadioButton
                    android:id="@+id/rbAlive"
                    android:text="@string/alive"
                    style="@style/bottom_sheet_radio_button" />

                <RadioButton
                    android:id="@+id/rbDead"
                    android:text="@string/dead"
                    style="@style/bottom_sheet_radio_button" />

                <RadioButton
                    android:id="@+id/rbUnknown"
                    android:text="@string/unknown"
                    style="@style/bottom_sheet_radio_button" />

            </RadioGroup>

            <TextView
                android:id="@+id/status_header"
                android:text="@string/gender"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_layout"
                style="@style/bottom_sheet_title" />

            <View
                android:id="@+id/divider2"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/fresh_green" />

            <RadioGroup
                android:id="@+id/rgGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2">

                <RadioButton
                    android:id="@+id/rbFemale"
                    android:text="@string/female"
                    style="@style/bottom_sheet_radio_button" />

                <RadioButton
                    android:id="@+id/rbMale"
                    android:text="@string/male"
                    style="@style/bottom_sheet_radio_button" />

                <RadioButton
                    android:id="@+id/rbGenderless"
                    android:text="@string/genderless"
                    style="@style/bottom_sheet_radio_button" />

                <RadioButton
                    android:id="@+id/rbUnknownGender"
                    android:text="@string/unknown"
                    style="@style/bottom_sheet_radio_button" />
            </RadioGroup>

            <LinearLayout
                style="@style/bottom_sheet_layout_btn">

                <Button
                    android:id="@+id/btnApply"
                    style="@style/bottom_sheet_btn_apply"
                    android:text="@string/apply"
                    app:backgroundTint="@color/fresh_green"/>

                <Button
                    android:id="@+id/btnCancel"
                    android:text="@string/clear"
                    style="@style/bottom_sheet_btn_cancel"
                    app:backgroundTint="@color/neon_orange"
                    />
            </LinearLayout>

        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>