<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.characters.view.CharactersListFragment">


    <TextView
        android:id="@+id/header_title"
        android:text="@string/episodes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/list_screen_header" />

    <LinearLayout
        android:id="@+id/search_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_title"
        style="@style/details_screen_search_layout">

        <Spinner
            android:spinnerMode="dialog"
            android:prompt="@string/categoty_search_header"
            android:layout_marginEnd="4dp"
            style="@style/bt_filter"
            android:id="@+id/spinnerCategory"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent" />




        <EditText
            android:id="@+id/input_text_search"
            style="@style/edit_text_search"
            android:hint="Type here"
            android:paddingEnd="4dp"
            android:paddingStart="12dp"
            android:drawableEnd="@drawable/ic_clear"
            />

        <ImageButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginEnd="4dp"
            android:id="@+id/bt_search"
            android:src="@drawable/ic_search"
            style="@style/bt_search_filter_black" />

    </LinearLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_layout"
        style="@style/details_screen_swipe_layout">


    <androidx.recyclerview.widget.RecyclerView

        android:id="@+id/recycler_view_items"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:foregroundGravity="center_horizontal">

    </androidx.recyclerview.widget.RecyclerView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/placeholder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_layout"
        style="@style/list_screen_layout_placeholder">

        <ImageView
            android:id="@+id/image_placeholder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_morty_placeholder" />

        <TextView
            android:id="@+id/text_placeholder"
            android:text="@string/placeholder_text"
            style="@style/list_screen_placeholder" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>