<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light_blue"
    xmlns:android="http://schemas.android.com/apk/res/android">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light_blue">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageButton
            android:id="@+id/back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back"
            style="@style/details_screen_back" />


        <TextView
            android:id="@+id/name"
            android:text="Pilot vvkvkkvkvkvkkvkvkvkkvkvkvkkvkvkv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/details_screen_main_name" />


        <TextView
            android:id="@+id/basic_info"
            android:text="Air date and code"
            android:fontFamily="@font/wubbalubbadubdub"
            app:layout_constraintStart_toStartOf="@id/details_part"
            app:layout_constraintTop_toBottomOf="@+id/details_part"
            style="@style/flexbox_discription" />

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/details_part"
            app:alignItems="center"
            app:flexWrap="wrap"
            app:justifyContent="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name"
            style="@style/flexbox_details">

            <TextView
                android:id="@+id/air_date"
                style="@style/details_screen_detail"
                tools:text="December 2, 2013" />
            <TextView
                android:id="@+id/code"
                style="@style/details_screen_detail"
                tools:text="S0130f0f" />



        </com.google.android.flexbox.FlexboxLayout>

        <TextView
            android:id="@+id/placeholder_no_internet"
            android:text="@string/no_internet_characters_episode"
            app:layout_constraintStart_toStartOf="@id/rv_characters"
            app:layout_constraintEnd_toEndOf="@id/rv_characters"
            app:layout_constraintTop_toBottomOf="@id/basic_info"
            android:background = "@drawable/circle_no_internet_details_screen"
            android:fontFamily="@font/wubbalubbadubdub"
            style="@style/placeholder_no_internet_details" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_characters"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/placeholder_no_internet"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            style="@style/details_screen_recycle" />

        <TextView
            android:id="@+id/placeholder_no_residents"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/placeholder_no_internet"
            android:text="@string/no_residents_episode"
            style="@style/details_screen_no_items_recycle" />

        <TextView
            android:id="@+id/episodes_info"
            style="@style/flexbox_discription"
            android:layout_marginEnd="18dp"
            android:fontFamily="@font/wubbalubbadubdub"
            android:text="@string/residents"
            app:layout_constraintBottom_toTopOf="@id/rv_characters"
            app:layout_constraintEnd_toEndOf="@id/rv_characters" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
</LinearLayout>