<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.characters.view.CharactersListFragment">


    <TextView
        android:id="@+id/header_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/schwifty"
        android:gravity="center_horizontal"
        android:text="@string/locations"
        android:textColor="@color/fresh_green"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/search_layout"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_title"
        android:orientation="horizontal">

        <Spinner
            android:spinnerMode="dialog"
            android:prompt="@string/categoty_search_header"
            android:layout_marginEnd="4dp"
            style="@style/bt_filter"
            android:id="@+id/spinnerCategory"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent" />




        <EditText
            android:id="@+id/input_text_search"
            style="@style/edit_text_search"
            android:hint="Type here"
            android:paddingEnd="4dp"
            android:paddingStart="12dp"
            android:drawableEnd="@drawable/ic_clear"
            />

        <ImageButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginEnd="4dp"
            android:id="@+id/bt_search"
            android:src="@drawable/ic_search"
            style="@style/bt_search_filter_black" />

    </LinearLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_height="0dp"
        android:layout_marginBottom="?attr/actionBarSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_layout">


    <androidx.recyclerview.widget.RecyclerView
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/recycler_view_items"
        android:layout_width="match_parent"
        android:foregroundGravity="center_horizontal">

    </androidx.recyclerview.widget.RecyclerView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_layout">

        <ImageView
            android:id="@+id/image_placeholder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_morty_placeholder" />

        <TextView
            android:id="@+id/text_placeholder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="36dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/wubbalubbadubdub"
            android:gravity="center"
            android:text="@string/placeholder_text"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>